--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,18 +1,64 @@
-$bg: rgb(207, 195, 195);
+$text: #27300f;
+$orange: #d26a22;
+$white: #ffffff;
 
-.box {
-    background-color: $bg;
-    &_title {
-        color: rgb(255, 51, 0);
+.header {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &__nav {
+        display: flex;
+        list-style-type: none;
+        margin: 0;
+        padding-left: 0;
+        gap: 48px;
     }
-    &_image {
-        max-width: 200px;
+    &__item {
     }
-    &_svg {
-        fill: rgb(196, 9, 213);
+    &__link {
+        font-size: 16px;
+        color: $text;
+        text-decoration: none;
         &:hover {
-            fill: gold;
+            color: $orange;
         }
-        
     }
+    &__tel {
+        font-size: 16px;
+        color: $text;
+        text-decoration: none;
+    }
+    &__cart {
+        display: block;
+        width: 40px;
+        height: 40px;
+        border-radius: 100%;
+        background-image: url(../images/cart.svg);
+        background-color: $orange;
+        background-size: 17px 15px;
+        background-repeat: no-repeat;
+        background-position: center center;
+        position: relative;
+
+    }
+    &__counter {
+        color: $white;
+        font-size: 8px;
+        position: absolute;
+        right: 10px;
+        top: 6px;
+    }
+}
+.logo {
+    display: block;
+    background-image: url(../images/logo.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 123px;
+    height: 32px;
 }
