--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,11 +18,12 @@ body {
 
 .header {
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 0 auto 4.8rem;
     padding: 4rem 15px 0 15px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 5%;
 
     &__nav {
         display: flex;
@@ -42,15 +43,17 @@ body {
         font-weight: 500;
         color: $green;
         text-decoration: none;
+        flex-basis: 160px;
         letter-spacing: .13rem;
         &:hover {
             color: $orange;
         }
     }
     &__cart {
+        padding: 0;
         display: block;
-        width: 3.8rem;
-        height: 3.8rem;
+        width: 4rem;
+        height: 4rem;
         border-radius: 100%;
         background-image: url(../images/cart.svg);
         background-color: $orange;
@@ -71,7 +74,7 @@ body {
         color: $white;
         font-size: .8rem;
         position: absolute;
-        right: 1rem;
+        right: .7rem;
         top: .6rem;
     }
 }
@@ -79,8 +82,8 @@ body {
     display: block;
     background-image: url(../images/logo.svg);
     background-repeat: no-repeat;
-    background-size: cover;
-    width: 12.3rem;
+    background-size: contain;
+    width: 12rem;
     height: 3.2rem;
 }
 .container {
@@ -93,6 +96,10 @@ body {
     background-image: url(../images/main.png);
     background-size: cover;
     background-position-x: center;
+    background-repeat: no-repeat;
+    position: relative;
+    padding-bottom: 18.7rem;
+    z-index: 0;
     &__item {
         margin-left: 12rem;
         max-width: 378px;
@@ -101,11 +108,138 @@ body {
     &__link {
         margin-top: 6rem;
     }
+    &__flex {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 30px;
+    }
+    &__cover {
+        flex-basis: 758px;
+        height: 758px;
+        border: 1px solid rgba($green, 0.4);
+        border-radius: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+    }
+    &__line {
+        width: 656px;
+        height: 656px;
+        border: 1px solid rgba($green, 0.4);
+        border-radius: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    &__image {
+        width: 92%;
+        border-radius: 100%;
+        box-shadow:11px 34px 52px -18px rgb(0 0 0 / 51%);
+    }
+    &__text {
+        padding-top: 4rem;
+    }
+    &__btn {
+        background-color: transparent;
+        border: none;
+        padding: 0;
+        position: absolute;
+        color: $green;
+        text-align: left;
+        z-index: 100;
+        &::before {
+            content: '';
+            background-color: $green;
+            width: 11px;
+            height: 11px;
+            background-color: $green;
+            box-shadow: 0 0 0 4px $white, 0 0 0 5px $green;
+            border-radius: 100%;
+            position: absolute;
+        }
+        &:hover {
+            &::before {
+                background-color: $orange;
+                box-shadow: 0 0 0 4px $white, 0 0 0 5px $orange;
+            }
+        }     
+            
+        &_01 {
+            top: 46px;
+            left: 67px;
+            &::before {
+                bottom: 9px;
+                right: -35px;
+            }
+        }
+        &_02 {
+            top: 194px;
+            right: 2px;
+            &::before {
+                top: 17px;
+                left: -26px;
+            }
+        }
+        &_03 {
+            bottom: -50px;
+            right: 244px;
+            &::before {
+                top: -24px;
+                left: 13px;
+            }
+        }
+    }
+    &__food {
+        display: block;
+        color: rgba($green, .8);
+        margin-bottom: .5rem;
+    }
+    &__tomato {
+       position: absolute;
+       bottom: 113px;
+       right: 95px;
+       width: 11rem;
+       z-index: -1;
+    }
+    &__avocado {
+        position: absolute;
+        top: 56px;
+        right: 0px;
+        width: 17.8rem;
+        z-index: -1;
+    }
+    &__cucumber {
+        position: absolute;
+        top: 0px;
+        left: 690px;;
+        width: 8.4rem;
+        z-index: -1;
+    }
+    &__pepper {
+        position: absolute;
+        top: 397px;
+        left: 38px;
+        width: 8.6rem;
+        z-index: -1;
+    }
+    &__beans {
+        position: absolute;
+        left: 0px;
+        bottom: 162px;
+        width: 10.5rem;
+        z-index: -1;
+    }
 }
 .title {
     font-family: $font-cormorant;
     font-weight: 700;
     font-size: 8rem;
+    margin: 0;
+    line-height: 1;
     margin: 0;
     &__span {
         font-style: italic;
@@ -118,19 +252,233 @@ body {
 }
 .description {
     margin: 0;
+    line-height: 1.5;
     &_size-s {
-        font-style: 1.8rem;
+        font-size: 1.8rem;
+    }
+    &_size-m {
+        font-size: 2.4rem;
     }
 }
 .link {
     color: $white;
+    letter-spacing: 0.13rem;
     text-transform: uppercase;
-    padding: 2.5rem 4.2rem;
+    padding: 2.4rem 4.3rem;
     background-color: $orange;
     box-shadow: 0px 1rem 1.1rem .2rem rgba(207, 92, 13, 0.2);
     text-decoration: none;
     border-radius: 3.8rem;
     display: inline-block;
+    cursor: pointer;
+}
+.offer {
+    background-image: url(../images/offer.png);
+    background-size: cover;
+    background-position-x: center;
+    background-repeat: no-repeat;
+    padding-top: 2rem;
+    padding-bottom: 12.8rem;
+    &__text {
+        margin-top: 6rem;
+        max-width: 700px;
+    }
+    &__slider {
+        overflow: hidden;
+        padding-top: 100px;
+    }
 }
 
+.swiper {
+    overflow: initial;
+    &-slide {
+        border: 1px solid rgba($green, 0.4);
+        border-radius: 2rem;
+        padding: 3rem 3.7rem 3.8rem;
+        box-sizing: border-box;
+        height: 520px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+        z-index: 0;
+        
+        &:hover {
+            box-shadow: 0 0 0 2px rgba($green, 0.4) inset;
+            .swiper-slide__hover {
+                height: 233px;
+                opacity: 1;
+            }
+            &::after {
+                content: '';
+                background-color: rgba(white, .55);
+                width: calc(100% - 4px);
+                height: calc(100% - 4px);
+                position: absolute;
+                top: 2px;
+                left: 2px;
+                border-radius: 2rem;
+                z-index: -1;
+            }
+        }
+        &_milk {
+            background-image: url(../images/milk.png);
+        }
+        &_pasta {
+            background-image: url(../images/pasta.png);
+        }
+        &_steaks {
+            background-image: url(../images/steaks.png);
+        }
+        &__title {
+            font-family: $font-cormorant;
+            font-size: 3rem;
+            color: $green;
+            margin-bottom: 0;
+        }
+        &__hover {
+             height: 0;
+             opacity: 0;
+        }
+        &__text {
+            color: rgba($green, 0.7);
+            line-height: 1.5;
+            margin-top: 2.5rem;
+            margin-bottom: 3.4rem;
+            max-width: 263px;;
+        }
+        &__link {
+            text-decoration: none;
+            text-transform: uppercase;
+            font-weight: 500;
+            color: $green;
+            display: flex;
+            align-items: center;
+            gap: 2rem;
+            letter-spacing: 0.1rem;
+            opacity: .8;
+            &:hover {
+                opacity: 0;
+            }
+            
+            &::before {
+                content: '';
+                display: block;
+                width: 3rem;
+                height: 3rem;
+                background-image: url(../images/plus.svg);
+                background-size: cover;
+                background-repeat: no-repeat;
+                
+            }
+        }
+    }
+    
+
+    &-pagination {
+        display: none;
+    }
+    &-button-next, &-button-prev {
+        top: -60px;
+        &:hover {
+            &::after {
+                color: rgba($green,  1);
+            }
+        }
+        &::after {
+            color: rgba($green, .4);
+            font-size: 20px;
+        }
+    }
+    &-button-prev {
+        left: initial;
+        right: 72px;
+    }
+    &-button-next {
+        right: -8px;
+    }
+}
+.about {
+    background-image: url(../images/about.png);
+    background-size: cover;
+    background-position-x: center;
+    background-repeat: no-repeat;
+    position: relative;
+    padding-top: 3.7rem;
+    padding-bottom: 10rem;
+
+    &__box {
+        margin-top: 7rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 10rem;
+    }
+    &__text {
+        margin-left: 12rem;
+        flex-basis: 620px;
+    }
+    &__list {
+        list-style: none;
+        font-size: 3rem;
+        font-family: $font-cormorant;
+        font-style: italic;
+        line-height: 1.2;
+        margin: 0;
+        padding-left: 0;
+        display: flex;
+        gap: 9rem;
+    }
+    &__item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        &::before {
+            content: '';
+            width: 84px;
+            height: 84px;
+            background-position: center center;
+            background-repeat: no-repeat;
+            border: 1px solid rgba($green, 0.4);
+            border-radius: 100%;
+            margin-bottom: 1.5rem;
+
+        }
+        &:nth-child(1) {
+            &::before {
+                background-image: url(../images/about-icon-1.svg);
+                background-size: 44px 41px;
+            }
+        }
+        :nth-child(2) {
+            &::before {
+                background-image: url(../images/about-icon-2.svg);
+                background-size: 44px 41px;
+            }
+        }
+        :nth-child(3) {
+            &::before {
+                background-image: url(../images/about-icon-3.svg);
+                background-size: 44px 41px;
+            }
+        }
+    }
+}
+
+.trends {
+    background-image: url(../images/about.png);
+    background-size: cover;
+    background-position-x: center;
+    background-repeat: no-repeat;
+    position: relative;
+    padding-top: 3.9rem;
+    padding-bottom: 19rem;
+    .trends__text {
+        margin-top: 4rem;
+    }
+}
+  
   
