--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -264,7 +264,7 @@ body {
     color: $white;
     letter-spacing: 0.13rem;
     text-transform: uppercase;
-    padding: 2.4rem 4.3rem;
+    padding: 2.4rem 4.1rem;
     background-color: $orange;
     box-shadow: 0px 1rem 1.1rem .2rem rgba(207, 92, 13, 0.2);
     text-decoration: none;
@@ -283,10 +283,10 @@ body {
         margin-top: 6rem;
         max-width: 700px;
     }
-    &__slider {
-        overflow: hidden;
-        padding-top: 100px;
-    }
+}
+.slider {
+    overflow: hidden;
+    padding-top: 100px;
 }
 
 .swiper {
@@ -304,24 +304,30 @@ body {
         background-size: cover;
         position: relative;
         z-index: 0;
+        &_white {
+            &:hover {
+                .swiper-slide__hover {
+                    height: 233px;
+                    opacity: 1;
+                }
+            
+                &::after {
+                    content: '';
+                    background-color: rgba(white, .55);
+                    width: calc(100% - 4px);
+                    height: calc(100% - 4px);
+                    position: absolute;
+                    top: 2px;
+                    left: 2px;
+                    border-radius: 2rem;
+                    z-index: -1;
+                }
+            }
+        }
         
         &:hover {
-            box-shadow: 0 0 0 2px rgba($green, 0.4) inset;
-            .swiper-slide__hover {
-                height: 233px;
-                opacity: 1;
-            }
-            &::after {
-                content: '';
-                background-color: rgba(white, .55);
-                width: calc(100% - 4px);
-                height: calc(100% - 4px);
-                position: absolute;
-                top: 2px;
-                left: 2px;
-                border-radius: 2rem;
-                z-index: -1;
-            }
+            box-shadow: 0 0 0 2px rgba($green, 0.4) inset;         
+            
         }
         &_milk {
             background-image: url(../images/milk.png);
@@ -374,9 +380,12 @@ body {
                 
             }
         }
-    }
-    
-
+        &__footer {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+    }    
     &-pagination {
         display: none;
     }
@@ -400,6 +409,18 @@ body {
         right: -8px;
     }
 }
+.counter {
+    &__bnt {
+        cursor: pointer;
+        width: 50px;
+        height: 50px;
+        border: 1px solid $green;
+    }
+    &__minus {
+        pointer-events: none;
+    }
+
+}
 .about {
     background-image: url(../images/about.png);
     background-size: cover;
@@ -421,6 +442,7 @@ body {
         flex-basis: 620px;
     }
     &__list {
+        display: flex;
         list-style: none;
         font-size: 3rem;
         font-family: $font-cormorant;
@@ -428,7 +450,6 @@ body {
         line-height: 1.2;
         margin: 0;
         padding-left: 0;
-        display: flex;
         gap: 9rem;
     }
     &__item {
@@ -449,20 +470,20 @@ body {
         }
         &:nth-child(1) {
             &::before {
-                background-image: url(../images/about-icon-1.svg);
+                background-image: url(../images/about-icon1.svg);
                 background-size: 44px 41px;
             }
         }
-        :nth-child(2) {
+        &:nth-child(2) {
             &::before {
-                background-image: url(../images/about-icon-2.svg);
-                background-size: 44px 41px;
+                background-image: url(../images/about-icon2.svg);
+                background-size: 40px 40px;
             }
         }
-        :nth-child(3) {
+        &:nth-child(3) {
             &::before {
-                background-image: url(../images/about-icon-3.svg);
-                background-size: 44px 41px;
+                background-image: url(../images/about-icon3.svg);
+                background-size: 45px 39px;
             }
         }
     }
