--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,6 +38,8 @@ body {
     &__link {
         color: $green;
         text-decoration: none;
+        transition: .2s;
+        cursor: pointer;
         &:hover {
             color: $orange;
         }
@@ -48,6 +50,8 @@ body {
         text-decoration: none;
         flex-basis: 160px;
         letter-spacing: .13rem;
+        transition: .2s;
+        cursor: pointer;
         &:hover {
             color: $orange;
         }
@@ -65,6 +69,7 @@ body {
         background-position: center center;
         position: relative;
         border: 1px solid $orange;
+        transition: .2s;
         cursor: pointer;
 
         &:hover {
@@ -149,6 +154,8 @@ body {
         position: absolute;
         color: $green;
         text-align: left;
+        transition: .2s;
+        cursor: pointer;
         z-index: 100;
         &::before {
             content: '';
@@ -312,6 +319,7 @@ body {
         background-size: cover;
         position: relative;
         z-index: 0;
+        transition: .2s;
         &_white {
             height: 520px;
             display: flex;
@@ -377,6 +385,8 @@ body {
             gap: 2rem;
             letter-spacing: 0.1rem;
             opacity: .8;
+            transition: .2s;
+            cursor: pointer;
             &:hover {
                 opacity: 0;
             }            
@@ -429,6 +439,7 @@ body {
     }
     &-button-next, &-button-prev {
         top: -60px;
+        transition: .2s;
         &:hover {
             &::after {
                 color: rgba($green,  1);
@@ -580,6 +591,7 @@ body {
         margin: 6rem auto 0;
         max-width: 182px;
         font-weight: 500;
+        transition: .2s;
         cursor: pointer;
         &:hover {
             opacity: 1;
@@ -614,6 +626,8 @@ body {
         text-decoration: none;
         border-radius: 4rem;
         display: block;
+        transition: .2s;
+        cursor: pointer;
         &:hover {
             border: 1px solid $orange;
             color: $orange;
@@ -629,6 +643,7 @@ body {
         border-radius: 2rem;
         padding: 2.7rem 3rem 3.8rem;
         box-sizing: border-box;
+        transition: .2s;
        &:hover {
         box-shadow: 0 0 0 2px rgba($green, .4) inset;
        }
@@ -774,10 +789,7 @@ body {
             font-weight: 500;
         }
         &__item {            
-            margin-bottom: 2rem;
-            &:last-child {
-                margin-bottom: 0;
-            }
+            margin-bottom: 2rem;           
         }
         &__link {
             color: $green;
@@ -786,6 +798,11 @@ body {
             display: flex;
             align-items: center;
             gap: 3rem;
+            transition: .2s;
+            cursor: pointer;
+            &:hover {
+                color: $orange;
+            }
             &::before {
                 content: '';
                 background-repeat: no-repeat;
@@ -951,6 +968,7 @@ footer {
         color: rgba(39,48,15,.6);
         text-decoration: none;
         transition: .2s;
+        cursor: pointer;
         &:hover {
             color: rgba($green, 1);
         }
