--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -355,7 +355,7 @@ body {
     &__image {
         width: 92%;
         border-radius: 100%;
-        animation: shadow 7s ease-in-out 1 forwards;        
+        animation: shadow 6s ease-in-out forwards;        
     }
     &__imagemobi {
         display: none;
@@ -660,28 +660,31 @@ body {
         padding-bottom: 7rem;
     }
     @media (max-width: $r_mob_360) {
-        padding-bottom: 4rem;
+        padding-bottom: 5rem;
         text-align: center;
     }
 }
 .swiper {
     overflow: initial;
     &-slide {
+        height: 670px;
         border: 1px solid rgba($green, 0.4);
         border-radius: 2rem;
-        padding: 3rem 3.7rem 3.8rem;
+        padding: 3rem 3.7rem 3.7rem;
         box-sizing: border-box;
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
         z-index: 0;
-        transition: .2s;
-        @media (max-width: $r_tab_900) {
-            padding: 3rem 2.7rem 3.8rem;
+        transition: .3s;
+        @media (max-width: $r_desk_1280) {
+            padding: 3rem 2rem 3.8rem;
+        }
+        @media (max-width: $r_desk_hd) {
+            height: 600px;
         }
         @media (max-width: $r_mob_500) {
-            text-align: center;
-            padding: 3rem 2rem 2.2rem;
+            height: 307px;
         }
         &_white {
             height: 520px;
@@ -689,15 +692,15 @@ body {
             flex-direction: column;
             justify-content: flex-end;
             background-size: contain;
-            padding: 4rem 3.7rem;
+            padding: 3rem 3.9rem;
+            transition: .3s;
             @media (max-width: $r_desk_hd) {
                 height: 400px;
             }
             @media (max-width: $r_mob_500) {
                 height: 240px;
-                text-align: center;
                 padding: 2.2rem 1.7rem;
-            }    
+            }
             &:hover {
                 .swiper-slide__hover {
                     height: 233px;
@@ -705,10 +708,10 @@ body {
                     @media (max-width: $r_mob_500) {
                         height: auto;
                     }
-                }            
+                }
                 &::after {
                     content: '';
-                    background-color: rgba(white, .55);
+                    background-color: rgba($white, .55);
                     width: calc(100% - 4px);
                     height: calc(100% - 4px);
                     position: absolute;
@@ -718,27 +721,32 @@ body {
                     z-index: -1;
                 }
             }
-        }        
+        }
         &:hover {
-            box-shadow: 0 0 0 2px rgba($green, 0.4) inset;         
-            
+            box-shadow: 0 0 0 2px rgba($green, 0.4) inset;
         }
         &_milk {
             background-image: url(../images/milk.png);
-            @media (max-width: $r_tab) {
-                background-size: 70%;
+            @media (max-width: $r_mob_500) {
+                background-image: url(../images/milk-min.png);
+                background-position: center;
             }
         }
         &_pasta {
             background-image: url(../images/pasta.png);
-            @media (max-width: $r_tab) {
-                background-size: 70%;
+            @media (max-width: $r_mob_500) {
+                background-image: url(../images/pasta-min.png);
+                background-position: center;
             }
         }
         &_steaks {
             background-image: url(../images/steaks.png);
-            @media (max-width: $r_tab) {
-                background-size: 70%;
+            @media (max-width: $r_desk) {
+                background-position: right;
+            }
+            @media (max-width: $r_mob_500) {
+                background-image: url(../images/steaks-min.png);
+                background-position: right;
             }
         }
         &__title {
@@ -746,21 +754,23 @@ body {
             font-size: 3rem;
             color: $green;
             margin-bottom: 0;
-            white-space: nowrap;
-            @media (max-width: $r_tab) {
-                font-size: 2.3rem;
+            @media (max-width: $r_desk_hd) {
+                text-align: center;
+                font-size: 2.5rem;
             }
             @media (max-width: $r_mob_500) {
                 font-size: 1.75rem;
                 margin-top: 0;
-                margin-bottom: 2rem;
-                text-align: center;
+                margin-bottom: 1rem;
+            }
+            @media (max-width: $r_mob_360) {
+                margin-bottom: 1.9rem;
             }
         }
         &__hover {
-             height: 0;
-             opacity: 0;
-             @media (max-width: $r_mob_500) {
+            height: 0;
+            opacity: 0;
+            @media (max-width: $r_mob_500) {
                 height: auto;
                 opacity: 1;
             }
@@ -771,34 +781,39 @@ body {
             margin-top: 2.5rem;
             margin-bottom: 3.4rem;
             max-width: 263px;
-            @media (max-width: $r_tab) {
-                margin-bottom: 2rem;
+            @media (max-width: $r_desk_1120) {
+                margin-bottom: 2.4rem;
+            }
+            @media (max-width: $r_desk_hd) {
+                text-align: center;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 1.5rem;
+                margin-bottom: 1.4rem;
             }
             @media (max-width: $r_mob_500) {
                 display: none;
             }
         }
         &__link {
-            text-decoration: none;
             text-transform: uppercase;
             font-weight: 500;
             color: $green;
+            text-decoration: none;
             display: flex;
             align-items: center;
             gap: 2rem;
             letter-spacing: 0.1rem;
             opacity: .8;
             transition: .2s;
-            cursor: pointer;
             @media (max-width: $r_mob_500) {
                 font-size: 1.25rem;
-                letter-spacing: 0;
                 justify-content: center;
                 gap: 9px;
             }
             &:hover {
-                opacity: 0;
-            }            
+                opacity: 1;
+            }
             &::before {
                 content: '';
                 display: block;
@@ -810,55 +825,57 @@ body {
                 @media (max-width: $r_mob_500) {
                     width: 2.5rem;
                     height: 2.5rem;
-                }                
+                }
             }
         }
         &__description {
             font-size: 1.8rem;
             color: rgba($green, .7);
-            margin-top: 2rem;
+            margin-top: 2.5rem;
             margin-bottom: 0;
             min-height: 55px;
-            max-width: 300px;
+            max-width: 25rem;
             line-height: 1.5;
-            @media (max-width: $r_tab) {
-                font-size: 1.6rem;
+            @media (max-width: $r_desk_hd) {
+                text-align: center;
+                margin-left: auto;
+                margin-right: auto;
             }
             @media (max-width: $r_mob_500) {
-                margin-top: -0.5rem;
-                font-size: 1.5rem;
-                min-height: auto;
+                margin-top: 8px;
+                min-height: 38px;
             }
         }
         &__price {
             font-size: 2.4rem;
-            margin-bottom: 3rem;
-            @media (max-width: $r_mob_500) {
-                font-size: 1.7rem;
-                margin-bottom: 2.2rem;
-            }
-            @media (max-width: $r_mob_360) {
+            margin-bottom: 3.4rem;
+            @media (max-width: $r_desk_hd) {
                 text-align: center;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            @media (max-width: $r_mob_500) {
+                font-size: 1.75rem;
+                margin-bottom: 2rem;
             }
         }
         &__cover {
             position: relative;
             overflow: hidden;
             width: 100%;
-            height: 322px;
+            height: 312px;
             text-align: center;
             @media (max-width: $r_desk_hd) {
-                height: 200px;
+                height: 250px;
             }
             @media (max-width: $r_mob_500) {
-                height: 93px;
-            }           
+                height: 106px;
+            }
         }
         &__image {
-            max-width: 335px;
-            height: 100%;
             width: 100%;
             max-width: 351px;
+            height: 100%;
             object-fit: contain;
             @media (max-width: $r_mob_500) {
                 max-width: 120px;
@@ -874,7 +891,7 @@ body {
                 margin: 0 auto;
             }
         }
-    }    
+    }
     &-pagination {
         display: none;
         @media (max-width: $r_tab) {
@@ -883,38 +900,37 @@ body {
     }
     &-button-next, &-button-prev {
         top: -60px;
-        transition: .2s;
         @media (max-width: $r_tab) {
             display: none;
         }
         &:hover {
             &::after {
-                color: rgba($green,  1);
+                color: rgba($green, 1);
             }
         }
         &::after {
             color: rgba($green, .4);
             font-size: 20px;
+            transition: .2s;
         }
+    }
+    &-button-next {
+        right: -8px;
     }
     &-button-prev {
         left: initial;
         right: 72px;
     }
-    &-button-next {
-        right: -8px;
-    }
 }
 .swiper-horizontal>.swiper-pagination-bullets {
     bottom: -50px;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     @media (max-width: $r_mob_360) {
-        bottom: -30px;
+        bottom: -40px;
     }
 }
-
 .swiper-pagination-bullet-active {
     background: $orange;
     border: 1px solid $orange;
@@ -923,6 +939,7 @@ body {
     width: 8px;
     height: 8px;
 }
+
 .counter {
     display: flex;
     @media (max-width: $r_tab) {
@@ -979,7 +996,7 @@ body {
 .about {
     position: relative;
     padding-top: 3.7rem;
-    padding-bottom: 10rem;
+    padding-bottom: 15rem;
     @media (max-width: $r_mob_360) {
         padding-bottom: 3rem;
         padding-top: 5.5rem;
@@ -1139,7 +1156,7 @@ body {
         gap: 1.5rem;
         letter-spacing: .1rem;
         text-transform: uppercase;
-        margin: 6rem auto 0;
+        margin: 5.5rem auto 0;
         max-width: 182px;
         font-weight: 500;
         transition: .2s;
@@ -1179,11 +1196,12 @@ body {
     @media (max-width: $r_tab) {
         justify-content: center;
         font-size: 1.4rem;
-        gap: 1rem; 
-        @media (max-width: $r_mob_500) {
-            display: none;
-        }       
-    }
+        gap: 1rem;
+    } 
+     @media (max-width: $r_mob_500) {
+        display: none;
+    }       
+    
     &__item {
         flex-basis: 230px;
         text-align: center;
@@ -1218,7 +1236,8 @@ body {
         text-align: center;
     }
     &__link {
-        padding: 2.4rem 0;
+        height: 50px;
+        padding: 2rem 2rem;
         border: 1px solid rgba($green, .5);
         color: rgba($green, .5);
         font-size: 1.8rem;
@@ -1355,7 +1374,7 @@ body {
     
 }
 .delivery {
-    padding-top: 6.8rem;
+    
     padding-bottom: 6rem;
     @media (max-width: $r_mob_360) {
         padding-top: 1rem;
@@ -1387,7 +1406,7 @@ body {
         }
     }
     &__description {
-        margin-bottom: 27px;
+        margin-bottom: 25px;
         @media (max-width: $r_mob_360) {
             margin-bottom: 2.3rem;
         }
@@ -1470,8 +1489,8 @@ body {
     }   
 }
 .contact {
-    padding-top: 10rem;
-    padding-bottom: 16rem;
+    padding-top: 13rem;
+    padding-bottom: 15rem;
     @media (max-width: $r_tab) {
         padding-top: 4rem;
         padding-bottom: 8rem;
@@ -1855,7 +1874,7 @@ footer {
     &__text {
         display: flex;
         justify-content: space-between;
-        margin-top: 6rem;
+        margin-top: 4rem;
         font-size: 1.6rem;
         color: rgba($green, .6);
         @media (max-width: $r_tab) {
@@ -1901,3 +1920,5 @@ footer {
         font-size: 1.8rem;
     }
 }
+
+
