--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -245,6 +245,7 @@ body {
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
+    overflow-x: hidden;
     @media (max-width: $r_tab) {
         max-width: 600px;
     }
@@ -364,6 +365,9 @@ body {
             max-width: 300px;
             margin: 0 auto;
             margin-top: 3rem;
+            animation: shadow 6s ease-in-out forwards; 
+            border-radius: 100%;
+            
         }
         @media (max-width: $r_mob_500) {
             max-width: 220px;
@@ -460,6 +464,7 @@ body {
     }
     &__tomato {
         position: absolute;
+        border-radius: 100%;
         // bottom: 26px;
         left: 35%;
         //    bottom: 113px;
@@ -475,6 +480,10 @@ body {
            animation: none;
            bottom: 3rem;
             left: 55rem;
+       }
+       @media (max-width: 670px) {
+            left: 44rem;
+            width: 8rem;
        }
        @media (max-width: $r_mob_500) {
             width: 7rem;
@@ -857,6 +866,9 @@ body {
                 margin-top: 8px;
                 min-height: 38px;
             }
+            @media (max-width: $r_mob_360) {
+                font-size: 1.5rem;
+            }
         }
         &__price {
             font-size: 2.4rem;
@@ -951,7 +963,6 @@ body {
     width: 8px;
     height: 8px;
 }
-
 .counter {
     display: flex;
     @media (max-width: $r_tab) {
@@ -1269,11 +1280,11 @@ body {
         @media (max-width: $r_mob_360) {
             font-size: 1.25rem;
             padding: 1.7rem 0;
+            padding-top: 2.2rem;
             flex-basis: 110px;
         }
     }
 }
-
 .catalog-grid { 
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -1919,7 +1930,7 @@ footer {
         top: -100px;
     }
     100% {
-        top: 85%;
+        top: 82%;
     }
 }
 @keyframes tomato-animated {
@@ -1936,14 +1947,14 @@ footer {
   100% { transform: rotate(360deg); }
 }
 
-// @keyframes bouncing {
-//     0%  {
-//         bottom: 0; box-shadow: 0 0 5px rgba(0,0,0,0.5); 
-//     }
-//     100% {
-//         bottom: 50px; box-shadow: 0 50px 50px rgba(0,0,0,0.1);
-//     }
-// }
+@keyframes bouncing {
+    0%  {
+        bottom: 0; box-shadow: 0 0 5px rgba(0,0,0,0.5); 
+    }
+    100% {
+        bottom: 50px; box-shadow: 0 50px 50px rgba(0,0,0,0.1);
+    }
+}
 
 @keyframes shadow {
     0% {
