--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1287,7 +1287,8 @@ body {
 .catalog-grid { 
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
+    gap: 2rem;
+    margin-top: 4.6rem;
     @media (max-width: $r_desk_1280) {
         grid-template-columns: repeat(3, 1fr);
     }
@@ -1295,7 +1296,8 @@ body {
         grid-template-columns: repeat(2, 1fr);
     }
     @media (max-width: $r_tab) {
-        gap: 10px;
+        gap: 1rem;
+    
     }
     &__item {
         border: 1px solid rgba(39, 48, 15, 0.4);
@@ -1307,7 +1309,7 @@ body {
             padding: 2.2rem 2rem 2.8rem;
         }
         @media (max-width: $r_mob_500) {
-           // padding: 1.5rem 1.5rem;
+           
             padding: 1.2rem 1rem 1.8rem;
             text-align: center;            
         }
@@ -1357,42 +1359,53 @@ body {
         color: $green;
         margin-top: 1.7rem;
         margin-bottom: 0;
+        @media (max-width: 1460px) {
+            font-size: 2.5rem;
+        }
+        @media (max-width: $r_desk_hd) {
+            text-align: center;
+        }
         @media (max-width: $r_tab) {
             font-size: 2rem;
         }
-        @media (max-width: $r_mob_500) {
-            margin-top: 0.6rem;
-            font-size: 1.75rem;
+        @media (max-width: $r_mob_360) {
+            font-size: 1.55rem;
         }
     }
     &__description {
         font-size: 1.6rem;
         color: rgba($green, .7);
+        max-width: 30rem;
         margin-top: 1.8rem;
         margin-bottom: 0;
         max-height: 61px;
-        max-width: 300px;
         line-height: 1.5;
+        @media (max-width: $r_desk_hd) {
+            text-align: center;
+        }
         @media (max-width: $r_tab) {
             font-size: 1.3rem;
-        }
-        @media (max-width: $r_mob_500) {
-            max-height: 37px;
+            max-height: 58px;
+            margin-bottom: 4px;
         }
         @media (max-width: $r_mob_360) {
-            font-size: 1.1rem;
-        } 
+            margin-top: 1rem;
+            max-height: 48px;
+        }
     }
     &__price {
         font-size: 2.4rem;
         margin-bottom: 3rem;
-        margin-top: 0;
+        margin-top: 2rem;
+        @media (max-width: $r_desk_hd) {
+            text-align: center;
+        }
         @media (max-width: $r_tab) {
             font-size: 2rem;
         }
         @media (max-width: $r_mob_500) {
-            font-size: 1.6rem;
-            margin-bottom: 1.5rem;
+            font-size: 1.5rem;
+            margin-bottom: 1.6rem;
             
         }
     }
